# MiniTensor

./: .gitignore  pyproject.toml
src/: __init__.py  device.py  function.py  structure.py  tensor.py
src/ops/: __init__.py  base.py  math.py  overload.py  reduce.py  where.py
src/ops/tests/: base_test.py  math_test.py  overload_test.py  reduce_test.py  where_test.py
src/tests/: core_ops_test.py  decorator_test.py  device_test.py  ops_overload_test.py  props_test.py  structure_test.py  transforms_and_whereelements.py
